--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/event-emitter": "^2.0.2",
+    "@nestjs/schedule": "^3.0.3",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
